RAVE-453 use the (lenient) JSON parser from Shindig instead of rave-core that allows comments in JSON (although there is no such concept as comments in JSON)
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1238491 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-shindig/pom.xml
+++ b/rave-shindig/pom.xml
@@ -41,11 +41,20 @@
         <dependency>
             <groupId>org.apache.rave</groupId>
             <artifactId>rave-core</artifactId>
-            <!-- Shindig common adds jsp & el jars to the war that cause conflicts in Tomcat -->
             <exclusions>
+                <!-- Shindig common adds jsp & el jars to the war that cause conflicts in Tomcat -->
                 <exclusion>
                     <groupId>org.apache.shindig</groupId>
                     <artifactId>shindig-common</artifactId>
+                </exclusion>
+                <!--
+                    Shindig contains JSON files with "comments" as if they were JavaScript files.
+                    The JSON parser that ships with rave-core isn't as lenient as older versions and throws an exception
+                    on comments.
+                 -->
+                <exclusion>
+                    <groupId>org.json</groupId>
+                    <artifactId>json</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -156,11 +165,11 @@
     <build>
         <defaultGoal>install</defaultGoal>
         <testResources>
-	   <testResource>
-	       <directory>src/test/resources</directory>
-	       <filtering>true</filtering>
-	   </testResource>
-	</testResources>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </testResource>
+        </testResources>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -177,9 +186,6 @@
                   <overlay>
                     <groupId>org.apache.shindig</groupId>
                     <artifactId>shindig-server</artifactId>
-                    <excludes>
-                      <exclude>WEB-INF/lib/json-20070829.jar</exclude>
-                    </excludes>
                   </overlay>
                 </overlays>
               </configuration>
