Fixing issues in shindig property override mechanism.  The two properties loaders (guice and spring) were looking at different system properties to decide when to override the default property file.  This commit updates the guice side loader to use the same override property as the spring side (and the same one referenced on the rave website).
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1240369 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal/pom.xml
+++ b/rave-portal/pom.xml
@@ -176,7 +176,7 @@
                             <!-- Documentation: http://incubator.apache.org/rave/documentation/host-configuration.html -->
                             <!--
                                 <portal.override.properties>/path/to/custom.portal.properties</portal.override.properties>
-                                <shindig.override.properties>/path/to/custom.shindig.properties</shindig.override.properties>
+                                <rave-shindig.override.properties>/path/to/custom.shindig.properties</rave-shindig.override.properties>
                                 <shindig.host>localhost</shindig.host>
                                 <shindig.port>8080</shindig.port>
                                 <shindig.contextroot />
