--- a/rave-components/rave-core/pom.xml
+++ b/rave-components/rave-core/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <artifactId>rave-components</artifactId>
         <groupId>org.apache.rave</groupId>
-        <version>0.8-incubating</version>
+        <version>0.9-incubating-SNAPSHOT</version>
     </parent>
 
     <artifactId>rave-core</artifactId>
