--- a/rave-portal/pom.xml
+++ b/rave-portal/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.rave</groupId>
         <artifactId>rave-project</artifactId>
-        <version>0.8-incubating</version>
+        <version>0.9-incubating-SNAPSHOT</version>
     </parent>
 
     <groupId>org.apache.rave</groupId>
