Code in support of RAVE-457: View Person Profile Page: - new PageType model which classifies types of Pages (User, Person Profile) - refactored PageService method names  - changed DefaultPagePermissionEvaluator to allow Person Profile pages to be viewed by anyone
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1244516 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-components/rave-core/src/test/resources/portal.properties
+++ b/rave-components/rave-core/src/test/resources/portal.properties
@@ -32,7 +32,7 @@ portal.jpaVendorAdapter.database=H2
 
 # General Rave portal database settings
 portal.jpaVendorAdapter.showSql=true
-portal.openjpa.Log=DefaultLevel=WARN, Runtime=INFO, Tool=INFO, SQL=TRACE
+portal.openjpa.Log=DefaultLevel=WARN, Runtime=INFO, Tool=INFO, SQL=WARN
 portal.openjpa.RuntimeUnenhancedClasses=supported
 portal.openjpa.jdbc.SynchronizeMappings=buildSchema(ForeignKeys=true)
 
