--- a/rave-portal/src/test/resources/portal.properties
+++ b/rave-portal/src/test/resources/portal.properties
@@ -45,7 +45,7 @@ portal.jpaVendorAdapter.database=H2
 
 # General Rave portal database settings
 portal.jpaVendorAdapter.showSql=true
-portal.openjpa.Log=DefaultLevel=WARN, Runtime=INFO, Tool=INFO, SQL=TRACE
+portal.openjpa.Log=DefaultLevel=WARN, Runtime=INFO, Tool=INFO, SQL=WARN
 portal.openjpa.RuntimeUnenhancedClasses=unsupported
 portal.openjpa.jdbc.SynchronizeMappings=buildSchema(ForeignKeys=true)
 
