--- a/rave-shindig/src/test/resources/rave.shindig.properties
+++ b/rave-shindig/src/test/resources/rave.shindig.properties
@@ -38,7 +38,7 @@ rave-shindig.jpaVendorAdapter.database=H2
 
 # General Rave Shindig database settings
 rave-shindig.jpaVendorAdapter.showSql=true
-rave-shindig.openjpa.Log=DefaultLevel=WARN, Runtime=INFO, Tool=INFO, SQL=TRACE
+rave-shindig.openjpa.Log=DefaultLevel=WARN, Runtime=INFO, Tool=INFO, SQL=WARN
 rave-shindig.openjpa.RuntimeUnenhancedClasses=supported
 rave-shindig.openjpa.jdbc.SynchronizeMappings=buildSchema(ForeignKeys=true)
 
