Applied patch submitted for RAVE-147
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1292365 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-components/rave-core/pom.xml
+++ b/rave-components/rave-core/pom.xml
@@ -144,6 +144,20 @@
             <artifactId>recaptcha4j</artifactId>
         </dependency>
 
+        <!-- mail -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
+
 
         <!-- Test -->
         <dependency>
