--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,9 @@
         <tiles.version>2.2.2</tiles.version>
         <recaptcha4j.version>0.0.7</recaptcha4j.version>
         <apacheds.version>1.5.5</apacheds.version>
-
+        <javax.mail.version>1.4.4</javax.mail.version>
+        <javax.activation.version>1.1</javax.activation.version>
+        <freemarker.version>2.3.18</freemarker.version>
         <!-- The location of Rave's H2 file DB. No trailing / -->
         <rave.database.location>/tmp/rave_db</rave.database.location>
 
@@ -181,6 +183,11 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-context</artifactId>
                 <version>${org.springframework.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>org.springframework</groupId>
+              <artifactId>spring-context-support</artifactId>
+              <version>${org.springframework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -397,6 +404,24 @@
                 <artifactId>recaptcha4j</artifactId>
                 <version>${recaptcha4j.version}</version>
             </dependency>
+            <!-- Mail-->
+          <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>${javax.mail.version}</version>
+            <scope>provided</scope>
+          </dependency>
+          <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>activation</artifactId>
+            <version>${javax.activation.version}</version>
+            <scope>provided</scope>
+          </dependency>
+          <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
+          </dependency>
 
             <!-- ApacheDS (LDAP) -->
             <dependency>
@@ -412,7 +437,7 @@
             </dependency>
 
 
-            <!-- Test -->
+          <!-- Test -->
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
