Added additional gadgets to store (Fixes RAVE-487)
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1292846 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal-resources/src/main/resources/portal.properties
+++ b/rave-portal-resources/src/main/resources/portal.properties
@@ -60,9 +60,9 @@ portal.captcha.usenoscript=false
 portal.captcha.invalid.configuration=<label class="error">ReCaptcha service is not properly configured.</label>
 
 #mail settings
-portal.mail.sender=m@mitre.org
-portal.mail.replyto=mfranklin@mitre.org
-portal.mail.host=smtp-bedford.mitre.org
+portal.mail.sender=
+portal.mail.replyto=
+portal.mail.host=
 portal.mail.password=
 portal.mail.username=
 portal.mail.protocol=smtp
