--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.rave</groupId>
         <artifactId>rave-master</artifactId>
-        <version>0.4-incubating-SNAPSHOT</version>
+        <version>0.8-incubating</version>
         <relativePath>../rave-master-pom/pom.xml</relativePath>
     </parent>
 
