--- a/rave-shindig/src/main/resources/rave.shindig.properties
+++ b/rave-shindig/src/main/resources/rave.shindig.properties
@@ -72,11 +72,11 @@ shindig.oauth.validator-max-timestamp-age-ms=300000
 shindig.signing.state-key=
 shindig.signing.key-name=
 shindig.signing.key-file=
-shindig.signing.global-callback-url=http://%authority%%contextRoot%/gadgets/oauthcallback
+shindig.signing.global-callback-url=http://localhost:8080/gadgets/oauthcallback
 shindig.signing.enable-signed-callbacks=true
 
 ### If a OAuth2Client does not specify a redirect uri it will default here
-shindig.oauth2.global-redirect-uri=http://%authority%%contextRoot%/gadgets/oauth2callback
+shindig.oauth2.global-redirect-uri=http://localhost:8080/gadgets/oauth2callback
 ### Setting to true will cause the registered OAuth2Persistence plugin to load it's values
 ### with what's in config/oauth2.json, no meaning without a second persistence implementation.
 shindig.oauth2.import=false
