[maven-release-plugin] prepare for next development iteration
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1296696 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-components/rave-web/pom.xml
+++ b/rave-components/rave-web/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <artifactId>rave-components</artifactId>
         <groupId>org.apache.rave</groupId>
-        <version>0.9-incubating</version>
+        <version>0.10-incubating-SNAPSHOT</version>
     </parent>
 
     <artifactId>rave-web</artifactId>
