--- a/rave-shindig/pom.xml
+++ b/rave-shindig/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.rave</groupId>
         <artifactId>rave-project</artifactId>
-        <version>0.9-incubating</version>
+        <version>0.10-incubating-SNAPSHOT</version>
     </parent>
 
     <artifactId>rave-shindig</artifactId>
