--- a/rave-portal-resources/src/main/webapp/WEB-INF/web.xml
+++ b/rave-portal-resources/src/main/webapp/WEB-INF/web.xml
@@ -21,7 +21,6 @@
 -->
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          id="Shindig"
          version="2.5">
@@ -66,6 +65,11 @@
     <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/index.html</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
