RAVE-495. Unable to login to Wookie as admin user when currently deployed with rave. Patch by Paul Sharples (psharples)).
git-svn-id: https://svn.apache.org/repos/asf/incubator/rave/trunk@1299802 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-portal/pom.xml
+++ b/rave-portal/pom.xml
@@ -150,14 +150,14 @@
                         </properties>
                         <home>${project.build.directory}/tomcat6x</home>
                         <deployables>
-	                        <deployable>
-		                        <groupId>org.apache.wookie</groupId>
-		                        <artifactId>wookie</artifactId>
-		                        <type>war</type>
-		                        <properties>
-			                        <context>/wookie</context>
-		                        </properties>
-	                       </deployable>
+                            <deployable>
+                                <groupId>org.apache.wookie</groupId>
+                                <artifactId>wookie</artifactId>
+                                <type>war</type>
+                                <properties>
+                                    <context>/wookie</context>
+                                </properties>
+                           </deployable>
                             <deployable>
                                 <groupId>org.apache.rave</groupId>
                                 <artifactId>rave-shindig</artifactId>
@@ -184,6 +184,13 @@
                                 </properties>
                             </deployable>
                         </deployables>
+                        <configfiles>
+                            <configfile>
+                                <file>${project.basedir}/../rave-portal-resources/src/main/dist/conf/tomcat-users.xml</file>
+                                <todir>conf/</todir>
+                                <tofile>tomcat-users.xml</tofile>
+                            </configfile>
+                        </configfiles>
                     </configuration>
                     <container>
                         <containerId>tomcat6x</containerId>
