--- a/rave-portal-dependencies/pom.xml
+++ b/rave-portal-dependencies/pom.xml
@@ -49,7 +49,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.rave</groupId>
-            <artifactId>rave-opensocial-provider</artifactId>
+            <artifactId>rave-opensocial-client</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.rave</groupId>
