--- a/rave-providers/rave-opensocial-provider/rave-opensocial-core/pom.xml
+++ b/rave-providers/rave-opensocial-provider/rave-opensocial-core/pom.xml
@@ -16,53 +16,28 @@
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.
-  
-  $Id$
+
+  $Id: pom.xml -1   $
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
+        <artifactId>rave-opensocial-provider</artifactId>
         <groupId>org.apache.rave</groupId>
-        <artifactId>rave-project</artifactId>
         <version>0.10-incubating-SNAPSHOT</version>
     </parent>
 
-    <artifactId>rave-shindig</artifactId>
-    <name>Apache Rave :: rave-shindig</name>
-    <description>Apache Rave Shindig App</description>
-    <packaging>war</packaging>
-
-    <properties>
-    </properties>
+    <artifactId>rave-opensocial-core</artifactId>
+    <name>Apache Rave :: rave-opensocial-core</name>
+    <description>Apache Rave OpenSocial Core Components</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.rave</groupId>
             <artifactId>rave-core</artifactId>
-            <exclusions>
-                <!-- Shindig common adds jsp & el jars to the war that cause conflicts in Tomcat -->
-                <exclusion>
-                    <groupId>org.apache.shindig</groupId>
-                    <artifactId>shindig-common</artifactId>
-                </exclusion>
-                <!--
-                    Shindig contains JSON files with "comments" as if they were JavaScript files.
-                    The JSON parser that ships with rave-core isn't as lenient as older versions and throws an exception
-                    on comments.
-                 -->
-                <exclusion>
-                    <groupId>org.json</groupId>
-                    <artifactId>json</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.shindig</groupId>
-            <artifactId>shindig-server</artifactId>
-            <type>war</type>
         </dependency>
 
         <dependency>
@@ -112,11 +87,13 @@
             <artifactId>shindig-social-api</artifactId>
             <type>test-jar</type>
         </dependency>
+        
         <dependency>
             <groupId>org.apache.shindig</groupId>
             <artifactId>shindig-common</artifactId>
             <type>test-jar</type>
         </dependency>
+        
         <dependency>
             <groupId>xmlunit</groupId>
             <artifactId>xmlunit</artifactId>
@@ -161,36 +138,10 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-
     <build>
-        <defaultGoal>install</defaultGoal>
-        <testResources>
-            <testResource>
-                <directory>src/test/resources</directory>
-                <filtering>true</filtering>
-            </testResource>
-        </testResources>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-
-        <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-war-plugin</artifactId>
-              <configuration>
-                <overlays>
-                  <overlay>
-                    <groupId>org.apache.shindig</groupId>
-                    <artifactId>shindig-server</artifactId>
-                  </overlay>
-                </overlays>
-              </configuration>
-            </plugin>
-            <plugin>
+        <defaultGoal>install</defaultGoal>        
+          <plugins>
+             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>openjpa-maven-plugin</artifactId>
                 <version>1.2</version>
@@ -230,24 +181,6 @@
                   </dependency>
                 </dependencies>
             </plugin>
-            <plugin>
-                <groupId>com.googlecode.mavenfilesync</groupId>
-                <artifactId>maven-filesync-plugin</artifactId>
-                <configuration>
-                    <mappings>
-                        <mapping>
-                            <sourceFolder>src/main/webapp</sourceFolder>
-                            <destinationFolder>@../rave-portal/target/tomcat6x/webapps/ROOT</destinationFolder>
-                        </mapping>
-                        <mapping>
-                            <sourceFolder>src/main/resources</sourceFolder>
-                            <destinationFolder>@../rave-portal/target/tomcat6x/webapps/ROOT/WEB-INF/classes</destinationFolder>
-                        </mapping>
-                    </mappings>
-                </configuration>
-            </plugin>
-        </plugins>
-
-    </build>
-
+       </plugins>
+   </build>
 </project>
