RAVE-529: Bump back to slf4j-1.6.1 by excluding shindig-server war packaged slf4j-* (1.5.x) See: https://issues.apache.org/jira/browse/RAVE-529
git-svn-id: https://svn.apache.org/repos/asf/rave/trunk@1306590 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-providers/rave-opensocial-provider/rave-opensocial-server/rave-shindig/pom.xml
+++ b/rave-providers/rave-opensocial-provider/rave-opensocial-server/rave-shindig/pom.xml
@@ -63,6 +63,19 @@
             <artifactId>shindig-server</artifactId>
             <type>war</type>
         </dependency>
+
+        <!-- log4j logging -->        
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -89,6 +102,10 @@
                   <overlay>
                     <groupId>org.apache.shindig</groupId>
                     <artifactId>shindig-server</artifactId>
+                    <excludes>
+                      <exclude>WEB-INF/lib/commons-logging-*.jar</exclude>
+                      <exclude>WEB-INF/lib/slf4j-*.jar</exclude>
+                    </excludes>
                   </overlay>
                 </overlays>
               </configuration>
