RAVE-531: Maven configuration and versions updates for TLP See: https://issues.apache.org/jira/browse/RAVE-531 rave-project fixes: - delete DISCLAIMER - update READMEs and other references to Incubator/Incubating - drop -incubating version postfix - fix scm locations - update rave-master-pom version to 0.9-SNAPSHOT (has been deployed to SNAPSHOT repository as well) - delete unneeded/empty rave-demo-gadgets META-INF/MANIFEST.MF
git-svn-id: https://svn.apache.org/repos/asf/rave/trunk@1306632 13f79535-47bb-0310-9956-ffa450edef68

--- a/rave-demo-gadgets/pom.xml
+++ b/rave-demo-gadgets/pom.xml
@@ -17,7 +17,7 @@
   specific language governing permissions and limitations
   under the License.
 
-  $Id:$
+  $Id$
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -25,13 +25,11 @@
 	<parent>
 		<groupId>org.apache.rave</groupId>
 		<artifactId>rave-project</artifactId>
-		<version>0.10-incubating-SNAPSHOT</version>
+		<version>0.10-SNAPSHOT</version>
 	</parent>
 
-	<groupId>org.apache.rave</groupId>
 	<artifactId>rave-demo-gadgets</artifactId>
 	<packaging>war</packaging>
-	<version>0.10-incubating-SNAPSHOT</version>
 	<name>Apache Rave :: Demo Gadgets</name>
     <description>Apache Rave Demo Gadgets</description>
     <build>
