--- a/rave-components/pom.xml
+++ b/rave-components/pom.xml
@@ -26,10 +26,9 @@
     <parent>
         <groupId>org.apache.rave</groupId>
         <artifactId>rave-project</artifactId>
-        <version>0.10-incubating-SNAPSHOT</version>
+        <version>0.10-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.apache.rave</groupId>
     <artifactId>rave-components</artifactId>
     <name>Apache Rave :: rave-components</name>
     <description>Apache Rave Components</description>
