--- a/rave-providers/rave-opensocial-provider/rave-opensocial-server/pom.xml
+++ b/rave-providers/rave-opensocial-provider/rave-opensocial-server/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <artifactId>rave-opensocial-provider</artifactId>
         <groupId>org.apache.rave</groupId>
-        <version>0.10-incubating-SNAPSHOT</version>
+        <version>0.10-SNAPSHOT</version>
     </parent>
 
     <artifactId>rave-opensocial-server</artifactId>
