--- a/rave-providers/rave-w3c-provider/pom.xml
+++ b/rave-providers/rave-w3c-provider/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <artifactId>rave-providers</artifactId>
         <groupId>org.apache.rave</groupId>
-        <version>0.10-incubating-SNAPSHOT</version>
+        <version>0.10-SNAPSHOT</version>
     </parent>
 
     <artifactId>rave-w3c-provider</artifactId>
