--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 
     <properties>
         <apache.shindig.version>3.0.0-beta4</apache.shindig.version>
+        <apache.wookie.version>0.9.2-incubating</apache.wookie.version>
         <org.springframework.version>3.1.0.RELEASE</org.springframework.version>
         <org.springframework.mobile.version>1.0.0.M3</org.springframework.mobile.version>
         <jstl.version>1.2</jstl.version>
@@ -154,6 +155,17 @@
                 <type>war</type>
             </dependency>
             <dependency>
+                <groupId>org.apache.wookie</groupId>
+                <artifactId>wookie</artifactId>
+                <version>${apache.wookie.version}</version>
+                <type>war</type>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.wookie</groupId>
+                <artifactId>wookie-java-connector</artifactId>
+                <version>${apache.wookie.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.apache.shindig</groupId>
                 <artifactId>shindig-server</artifactId>
                 <version>${apache.shindig.version}</version>
@@ -183,6 +195,17 @@
                 <artifactId>shindig-gadgets</artifactId>
                 <scope>test</scope>
                 <version>${apache.shindig.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.wookie</groupId>
+                <artifactId>wookie</artifactId>
+                <version>${apache.wookie.version}</version>
+                <type>war</type>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.wookie</groupId>
+                <artifactId>wookie-java-connector</artifactId>
+                <version>${apache.wookie.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
