--- a/rave-demo-gadgets/pom.xml
+++ b/rave-demo-gadgets/pom.xml
@@ -25,7 +25,7 @@
 	<parent>
 		<groupId>org.apache.rave</groupId>
 		<artifactId>rave-project</artifactId>
-		<version>0.10-SNAPSHOT</version>
+		<version>0.10</version>
 	</parent>
 
 	<artifactId>rave-demo-gadgets</artifactId>
