--- a/rave-providers/pom.xml
+++ b/rave-providers/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.apache.rave</groupId>
         <artifactId>rave-project</artifactId>
-        <version>0.10</version>
+        <version>0.11-SNAPSHOT</version>
     </parent>
 
     <artifactId>rave-providers</artifactId>
